@@ -662,7 +662,7 @@ Localization
         #LOC_BDArmory_TurnRadiusTwiddleFactorMin = Terrain Avoidance Tuning Min
         #LOC_BDArmory_TurnRadiusTwiddleFactorMax = Terrain Avoidance Tuning Max
         #LOC_BDArmory_TerrainAvoidanceCriticalAngle = Inverted Terrain Avoidance Critical Angle
-        #LOC_BDArmory_TerrainAvoidanceControlSurfaceDeployTime = Control Surface Deploy Time
+        #LOC_BDArmory_TerrainAvoidanceVesselReactionTime = Vessel Reaction Time
         #LOC_BDArmory_WaypointTerrainAvoidance = Waypoint Terrain Avoidance
         
         #LOC_BDArmory_PilotAI_Ramming = Ramming
@@ -740,7 +740,7 @@ Localization
         #LOC_BDArmory_AIWindow_terrainMin = Turn radius multiplier for ideal craft orientation
         #LOC_BDArmory_AIWindow_terrainMax = Turn radius multiplier for inverted craft orientation
         #LOC_BDArmory_AIWindow_InvertedTerrainAvoidanceCriticalAngleContext = Critical angle for inverted terrain avoidance or rolling first
-        #LOC_BDArmory_AIWindow_TerrainAvoidanceControlSurfaceDeploymentTimeContext = Estimate of time to deploy control surfaces
+        #LOC_BDArmory_AIWindow_TerrainAvoidanceVesselReactionTimeContext = Estimate of time required to setup for optimal turning
         #LOC_BDArmory_AIWindow_WaypointTerrainAvoidanceContext = Range and strength of waypoint terrain correction
         #LOC_BDArmory_AIWindow_ramLag = Ram trajectory correction for control surfaces' lag
         #LOC_BDArmory_AIWindow_orbit = Direction of non-combat cruising
@@ -791,7 +791,7 @@ Localization
         #LOC_BDArmory_AIWindow_TurnRadiusMin = Terrain Avoid Min
         #LOC_BDArmory_AIWindow_TurnRadiusMax = Terrain Avoid Max
         #LOC_BDArmory_AIWindow_InvertedTerrainAvoidanceCriticalAngle = Inverted Crit. Angle
-        #LOC_BDArmory_AIWindow_TerrainAvoidanceControlSurfaceDeploymentTime = Ctrl Srf Deploy Time
+        #LOC_BDArmory_AIWindow_TerrainAvoidanceVesselReactionTime = Vessel Reaction Time
         #LOC_BDArmory_AIWindow_WaypointTerrainAvoidance = WP Terrain Avoid
         #LOC_BDArmory_AIWindow_ControlSurfaceLag = Control srf. Lag
 
@@ -836,7 +836,7 @@ Localization
         #LOC_BDArmory_AIWindow_EvadeHelp_ExtendAbortTime = Extend Abort Time - This tells the AI to abort extending if it hasn't made any gains within this time. Extending then enters a 5s cooldown period.
         #LOC_BDArmory_AIWindow_EvadeHelp_ExtendToggle = Extend Toggle - This enables or disables extending against air targets (extending against ground targets is not affected).
 
-        #LOC_BDArmory_AIWindow_TerrainHelp = Terrain Avoidance is used to predict collisions with the ground, by scaling the craft's turn radius to generate a terrain collision distance to tell the AI if it needs to pull up. The Terrain Avoid Min value is based on optimum flight conditions, with the plane parallel to the ground and only needs to pitch up. Terrain Avoid Max is based on the worst case scenerio with the plane inverted to the ground, and needs to roll 180 degrees before pitching up. The critical angle for inverted terrain avoidance determines the roll angle w.r.t. the terrain normal at which the plane will try to avoid the terrain while inverted or try to roll up first. The control surface deployment time is an estimate of how long it takes on average to adjust control surfaces in order to avoid terrain. Waypoint Terrain Avoidance affects the range and strength of the adjustment to the fly-to direction due to terrain being between the craft and the current waypoint.
+        #LOC_BDArmory_AIWindow_TerrainHelp = Terrain Avoidance is used to predict collisions with the ground, by scaling the craft's turn radius to generate a terrain collision distance to tell the AI if it needs to pull up. The Terrain Avoid Min value is based on optimum flight conditions, with the plane parallel to the ground and only needs to pitch up. Terrain Avoid Max is based on the worst case scenerio with the plane inverted to the ground, and needs to roll 180 degrees before pitching up. The critical angle for inverted terrain avoidance determines the roll angle w.r.t. the terrain normal at which the plane will try to avoid the terrain while inverted or try to roll up first. The vessel reaction time is an estimate of how long it takes on average for the vessel to get into an optimal setup for a tight turn away from terrain. Waypoint Terrain Avoidance affects the range and strength of the adjustment to the fly-to direction due to terrain being between the craft and the current waypoint.
 
         #LOC_BDArmory_AIWindow_RamHelp = Ramming controls if the craft should attempt to ram other craft when it is out of ammo or no longer has working weapons. If ramming is not enabled, the AI will instead continue to maneuver, but be unable to engage. Control Surface lag sets how much the AI should correct collision predictions, based on how long control surfaces take to reach full deflection. 
 
