@@ -13,6 +13,7 @@
 	- Hide the 3-axis dynamic damping button when dynamic damping is disabled.
 	- Move the dynamic damping toggles to before the sliders to stop them from jumping around when toggled.
 	- Fix the PID field ordering when the PAW is first opened.
+	- Change the localisation for "controlSurfaceDeploymentTime" to "Vessel Reaction Time" to be more representative of its function. Also increase its range when unclamped.
 - Weapons:
 	- Added (or corrected) penetration value for shaped charges to missile/gun/rocket part-menu infocards.
 	- Add an option when setting weapon groups to apply the group name to that weapon, symmetric weapons, all weapons of that type, all weapons of that class or applying to all guns/rockets/lasers.
